[package]
name = "ex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4" }
colored = { version = "2" }
ex-backend-llvm = { path = "ex-backend-llvm" }
ex-codegen = { path = "ex-codegen" }
ex-diagnostics = { path = "ex-diagnostics" }
ex-optimization = { path = "ex-optimization" }
ex-parser = { path = "ex-parser" }
ex-semantic-checking = { path = "ex-semantic-checking" }
ex-span = { path = "ex-span" }
ex-symbol = { path = "ex-symbol" }
regex = { version = "1" }

[workspace]
members = [
  "ex-backend-llvm",
  "ex-codegen",
  "ex-diagnostics",
  "ex-optimization",
  "ex-parser",
  "ex-semantic-checking",
  "ex-span",
  "ex-symbol"
]
