[package]
name = "ex-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ex-diagnostics = { path = "../ex-diagnostics" }
ex-parser = { path = "../ex-parser" }
ex-semantic-checking = { path = "../ex-semantic-checking" }
ex-span = { path = "../ex-span" }
ex-symbol = { path = "../ex-symbol" }
