[package]
name = "ex-ir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ex-diagnostics = { path = "../ex-diagnostics" }
ex-parser = { path = "../ex-parser" }
ex-resolve-ref = { path = "../ex-resolve-ref" }
ex-span = { path = "../ex-span" }
ex-symbol = { path = "../ex-symbol" }
ex-type-checking = { path = "../ex-type-checking" }
