[package]
name = "ex-optimization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ex-codegen = { path = "../ex-codegen" }
ex-parser = { path = "../ex-parser" }
ex-symbol = { path = "../ex-symbol" }
